--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lunar Chaos Calendar 🌙✨</title>
+  <title>Moon Flow 🌙✨</title>
   
   <!-- PWA Meta Tags -->
   <meta name="theme-color" content="#b8a4d4">
@@ -430,7 +430,7 @@
   <div class="container">
     <!-- Header -->
     <header>
-      <h1>Lunar Chaos Calendar <span class="moon-icon">🌙🌀</span></h1>
+      <h1>Moon Flow<span class="moon-icon">🌙✨</span></h1>
       <p class="subtitle">Track your cycle, embrace the beautiful chaos</p>
     </header>
 
