--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
   
   <style>
     /* ===================================
-       YOUR ORIGINAL CSS (kept the same)
+       CSS VARIABLES FOR LIGHT/DARK THEMES
        =================================== */
-    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap');
-
     :root {
+      /* Light Theme (default) */
       --bg-color: #f5f3f0;
       --primary-purple: #b8a4d4;
       --dark-purple: #3d2e52;
@@ -42,7 +41,39 @@
       --shadow-sm: 0 2px 8px rgba(0, 0, 0, 0.06);
       --shadow-md: 0 4px 16px rgba(0, 0, 0, 0.08);
       --shadow-lg: 0 8px 24px rgba(0, 0, 0, 0.12);
+      --card-bg: #ffffff;
+      --input-bg: #ffffff;
+      --input-border: #f0edf5;
     }
+
+    [data-theme="dark"] {
+      /* Dark Theme (purple) */
+      --bg-color: #2a1b3d;
+      --primary-purple: #b8a4d4;
+      --dark-purple: #e8dfff;
+      --light-purple: #3d2e52;
+      --accent-yellow: #ffc97d;
+      --white: #3d2e52;
+      --text-dark: #f5f3f0;
+      --text-light: #b8a4d4;
+      --success-green: #2d5f4d;
+      --success-text: #d4f1e8;
+      --danger-red: #7d2d2d;
+      --danger-text: #ffd4d4;
+      --warning-orange: #7d4d2d;
+      --warning-text: #ffe8d4;
+      --card-bg: #3d2e52;
+      --input-bg: #3d2e52;
+      --input-border: #5a4a6e;
+      --shadow-sm: 0 2px 8px rgba(0, 0, 0, 0.3);
+      --shadow-md: 0 4px 16px rgba(0, 0, 0, 0.4);
+      --shadow-lg: 0 8px 24px rgba(0, 0, 0, 0.5);
+    }
+
+    /* ===================================
+       BASE STYLES
+       =================================== */
+    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap');
 
     * {
       margin: 0;
@@ -58,6 +89,7 @@
       min-height: 100vh;
       overflow-x: hidden;
       padding: 2rem 1rem;
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
 
     .sparkle {
@@ -123,6 +155,9 @@
     header {
       text-align: center;
       margin-bottom: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     header h1 {
@@ -151,16 +186,85 @@
       color: var(--text-light);
     }
 
+    /* Theme Toggle */
+    .theme-toggle {
+      position: absolute;
+      top: 0;
+      right: 0;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.5rem 1rem;
+      background: var(--card-bg);
+      border-radius: var(--border-radius-pill);
+      box-shadow: var(--shadow-sm);
+      transition: all 0.3s ease;
+    }
+
+    .theme-toggle:hover {
+      box-shadow: var(--shadow-md);
+    }
+
+    .toggle-switch {
+      position: relative;
+      display: inline-block;
+      width: 50px;
+      height: 24px;
+    }
+
+    .toggle-switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .toggle-slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: var(--light-purple);
+      transition: .4s;
+      border-radius: 24px;
+    }
+
+    .toggle-slider:before {
+      position: absolute;
+      content: "";
+      height: 16px;
+      width: 16px;
+      left: 4px;
+      bottom: 4px;
+      background-color: var(--white);
+      transition: .4s;
+      border-radius: 50%;
+    }
+
+    input:checked + .toggle-slider {
+      background-color: var(--primary-purple);
+    }
+
+    input:checked + .toggle-slider:before {
+      transform: translateX(26px);
+    }
+
+    .toggle-icon {
+      font-size: 1.2rem;
+    }
+
     /* Calendar Styles */
     .calendar-header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       margin-bottom: 1.5rem;
-      background: var(--white);
+      background: var(--card-bg);
       padding: 1.5rem;
       border-radius: var(--border-radius);
       box-shadow: var(--shadow-md);
+      transition: background-color 0.3s ease;
     }
 
     .month-nav {
@@ -196,7 +300,7 @@
     }
 
     .btn-outline {
-      background-color: var(--white);
+      background-color: var(--card-bg);
       color: var(--dark-purple);
       border: 2px solid var(--primary-purple);
     }
@@ -214,11 +318,12 @@
     }
 
     .calendar-grid {
-      background: var(--white);
+      background: var(--card-bg);
       border-radius: var(--border-radius);
       box-shadow: var(--shadow-md);
       overflow: hidden;
       margin-bottom: 1rem;
+      transition: background-color 0.3s ease;
     }
 
     .weekdays {
@@ -241,11 +346,11 @@
       display: grid;
       grid-template-columns: repeat(7, 1fr);
       gap: 1px;
-      background: #f0edf5;
+      background: var(--input-border);
     }
 
     .day {
-      background: var(--white);
+      background: var(--card-bg);
       padding: 1rem;
       min-height: 100px;
       border: none;
@@ -295,7 +400,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: var(--white);
+      background: var(--card-bg);
       transition: all 0.3s ease;
     }
 
@@ -325,11 +430,12 @@
 
     /* Notes Section */
     .notes-section {
-      background: var(--white);
+      background: var(--card-bg);
       padding: 1.5rem;
       border-radius: var(--border-radius);
       box-shadow: var(--shadow-md);
       margin-bottom: 1rem;
+      transition: background-color 0.3s ease;
     }
 
     .selected-date {
@@ -343,7 +449,7 @@
     .notes-input {
       width: 100%;
       padding: 0.75rem;
-      border: 2px solid #f0edf5;
+      border: 2px solid var(--input-border);
       border-radius: var(--border-radius-sm);
       font-family: 'Quicksand', sans-serif;
       font-size: 0.9rem;
@@ -351,6 +457,8 @@
       min-height: 80px;
       margin-bottom: 1rem;
       transition: all 0.3s ease;
+      background-color: var(--input-bg);
+      color: var(--text-dark);
     }
 
     .notes-input:focus {
@@ -417,6 +525,12 @@
         top: 0.3rem;
         right: 0.3rem;
       }
+      
+      .theme-toggle {
+        position: relative;
+        margin-bottom: 1rem;
+        align-self: flex-end;
+      }
     }
   </style>
 </head>
@@ -430,6 +544,14 @@
   <div class="container">
     <!-- Header -->
     <header>
+      <div class="theme-toggle">
+        <span class="toggle-icon">☀️</span>
+        <label class="toggle-switch">
+          <input type="checkbox" id="theme-toggle">
+          <span class="toggle-slider"></span>
+        </label>
+        <span class="toggle-icon">🌙</span>
+      </div>
       <h1>Moon Flow <span class="moon-icon">🌙✨</span></h1>
       <p class="subtitle">Track your cycle, embrace the beautiful chaos</p>
     </header>
@@ -493,6 +615,7 @@
       init() {
         this.cacheDOMElements();
         this.attachEventListeners();
+        this.setupThemeToggle();
         this.renderCalendar();
         this.setupPWA();
       }
@@ -507,6 +630,7 @@
         this.dayNotesEl = document.getElementById('day-notes');
         this.saveNotesBtn = document.getElementById('save-notes');
         this.installBtn = document.getElementById('installBtn');
+        this.themeToggle = document.getElementById('theme-toggle');
       }
 
       attachEventListeners() {
@@ -514,6 +638,27 @@
         this.nextMonthBtn.addEventListener('click', () => this.nextMonth());
         this.todayBtn.addEventListener('click', () => this.goToToday());
         this.saveNotesBtn.addEventListener('click', () => this.saveNotes());
+      }
+
+      setupThemeToggle() {
+        // Check for saved theme preference or respect OS preference
+        const prefersDarkScheme = window.matchMedia('(prefers-color-scheme: dark)');
+        const savedTheme = localStorage.getItem('moonCalendarTheme');
+        
+        if (savedTheme === 'dark' || (!savedTheme && prefersDarkScheme.matches)) {
+          document.documentElement.setAttribute('data-theme', 'dark');
+          this.themeToggle.checked = true;
+        }
+
+        this.themeToggle.addEventListener('change', () => {
+          if (this.themeToggle.checked) {
+            document.documentElement.setAttribute('data-theme', 'dark');
+            localStorage.setItem('moonCalendarTheme', 'dark');
+          } else {
+            document.documentElement.removeAttribute('data-theme');
+            localStorage.setItem('moonCalendarTheme', 'light');
+          }
+        });
       }
 
       renderCalendar() {
