--- a/index.html
+++ b/index.html
@@ -497,12 +497,17 @@
 
     @media (max-width: 768px) {
       body {
-        padding: 1rem 0.5rem;
+        padding: 0.5rem 0.25rem;
+      }
+
+      .container {
+        max-width: 100%;
       }
 
       .calendar-header {
         flex-direction: column;
         gap: 1rem;
+        padding: 1rem;
       }
 
       .month-nav {
@@ -510,26 +515,68 @@
         justify-content: space-between;
       }
 
+      .calendar-grid {
+        margin: 0;
+      }
+
+      .weekday {
+        padding: 0.5rem 0.25rem;
+        font-size: 0.7rem;
+      }
+
+      .days-grid {
+        gap: 0;
+      }
+
       .day {
-        padding: 0.5rem;
-        min-height: 90px;
+        padding: 0.25rem;
+        min-height: 70px;
       }
 
       .day-number {
-        font-size: 0.9rem;
+        font-size: 0.85rem;
+      }
+
+      .day-notes {
+        font-size: 0.55rem;
+        margin-top: 0.25rem;
       }
 
       .period-checkbox {
-        width: 14px;
-        height: 14px;
-        top: 0.3rem;
-        right: 0.3rem;
+        width: 12px;
+        height: 12px;
+        top: 0.25rem;
+        right: 0.25rem;
+        border-width: 1.5px;
+      }
+
+      .period-checkbox.checked::after {
+        font-size: 0.8rem;
       }
       
       .theme-toggle {
         position: relative;
         margin-bottom: 1rem;
         align-self: flex-end;
+      }
+
+      .notes-section {
+        padding: 1rem;
+        margin: 0.5rem 0;
+      }
+
+      .selected-date {
+        font-size: 1rem;
+      }
+
+      .notes-input {
+        font-size: 0.85rem;
+        min-height: 60px;
+      }
+
+      .btn {
+        padding: 0.75rem 1.25rem;
+        font-size: 0.9rem;
       }
     }
   </style>
